Fix wrapping of paragraphs and links

--- a/src/qiskit_sphinx_theme/assets/styles/_layout.scss
+++ b/src/qiskit_sphinx_theme/assets/styles/_layout.scss
@@ -50,3 +50,21 @@ body {
 .toc-drawer {
   flex: 0 0 15em;
 }
+
+// Without this, long text breaks the site layout. This is especially a problem in API docs
+// with long headers. Simplify if
+// https://github.com/pradyunsg/furo/pull/670 gets merged and released.
+//
+// But, we keep tables without wrapping because they already have horizontal scrolling that works
+// correctly. The horizontal scroll is consistent with qiskit.org.
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p:not(table p),
+a:not(table a) {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
